--- a/hello.html
+++ b/hello.html
@@ -19,6 +19,11 @@
                 </head>
                 <body>
                         <h1 class="text-center">Hello World, Desmond</h1>
+                        <ul>
+                                <li>desmond</li>
+                                <li>aloo</li>
+                                <li>owiso</li>
+                        </ul>
         
                         <!-- jQuery -->
                         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
