--- a/hello.html
+++ b/hello.html
@@ -25,7 +25,7 @@
                                 <li>owiso</li>
                         </ul>
                         <ul>
-                                <li>desmond 1</li>
+                                <li style = "color:blue;">desmond 1</li>
                                 <li>aloo 1</li>
                                 <li>owiso 1</li>
                         </ul>
